<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Grappbox</string>
    <string name="content_authority">com.grappbox.grappbox</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_acitivty">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="error_unsupported_uri">Unknown URI : <xliff:g id="uri">%s</xliff:g></string>
    <string name="sync_account_type">grappbox.com</string>
    <string name="add_account">Add account</string>
    <string name="error_mail_not_filled">You have to fill the mail field</string>
    <string name="error_password_not_filled">You have to fill the password field</string>
    <string name="error_network_disconnected">Network disconnected, please active network</string>
    <string name="error_account_already_registered">This account is already synchronized</string>
    <string name="error_operation_canceled">Operation canceled</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="non_associate_resource">N/A</string>
    <string name="error_hacker_detected">You tried to access to a non existing resource</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_change_account">Change Account</string>
    <string name="title_change_project">Change Project</string>
    <string name="title_project_settings">Project Settings</string>
    <string name="title_whiteboard">Whiteboard</string>
    <string name="title_gantt">Gantt</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_bugtracker">Bugtracker</string>
    <string name="title_timeline">Talks</string>
    <string name="title_cloud">Cloud</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_project">Project</string>
    <string name="cloud_root_symbol">/</string>
    <string name="error_unknown_last_modified">Unknown last modifed date</string>
    <string name="title_new">New</string>
    <string name="directory">Directory</string>
    <string name="word_import">Import</string>
    <string name="directory_name">Directory name</string>
    <string name="new_directory">New directory</string>
    <string name="positive_response">OK</string>
    <string name="negative_response">Cancel</string>
    <string name="hint_safe_password">Safe password</string>
    <string name="error_already_in_database">The content you try to insert is already there, try to refresh application</string>
    <string name="error_network">It seems you have a network problem, please retry in few minutes</string>
    <string name="error_access_rights">You don\'t have the permission to access to this resource</string>
    <string name="error_resource_not_found">You try to access to an inexisting resource</string>
    <string name="error_unkown">It seems we have a little problem right now, retry in few minutes please</string>
    <string name="title_dialog_safe_password">Enter safe\'s password</string>
    <string name="hint_file_password">File password</string>
    <string name="error_no_app">You have no <xliff:g>%s</xliff:g> installed on your device, please install one</string>
    <string name="file_explorer_app">File Explorer</string>
    <string name="error_file_not_supported">The document you try to open is not supported</string>
    <string name="notif_text_cloud_send_file">Uploading file <xliff:g>%s</xliff:g> in progess</string>
    <string name="file_size">File Size</string>
    <string name="file_type">File type</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="congrats_download_granted">Awesome ! You can now download files on your device!</string>
    <string name="permission_grant_error">We are sorry you\'re not trusting us, please let us know why at contact@grappbox.com</string>
    <string name="tab_title_open">Open</string>
    <string name="tab_title_close">Close</string>
    <string name="tab_title_yours">Yours</string>
    <string name="bug_status_opened">Opened</string>
    <string name="bug_status_closed">Closed</string>
    <string name="bug_status_date"><xliff:g>%s</xliff:g> the <xliff:g>%s</xliff:g></string>
    <string name="word_secured">Secured</string>
    <string name="this_is_a_folder">This is a folder</string>
    <string name="title_activity_bug_details">Details</string>
    <string name="word_reply">Reply</string>
    <string name="account_settings">Account Settings</string>
    <string name="account">Account</string>
    <string name="not_yet_defined">Not yet defined</string>
    <string name="default_user_photo">Default user photo</string>
    <string name="go_to_reply">Go to reply</string>
    <string name="edit_your_comment">Edit your comment</string>
    <string name="delete_your_comment">Delete your comment</string>
    <string name="send_your_comment">Send your comment</string>
    <string name="modification">Modification</string>
    <string name="icon_download">Download icon</string>
    <string name="icon_delete">Delete icon</string>
    <string name="stroke_color">Stroke color</string>
    <string name="background_color">Background color</string>
    <string name="line_weight">Line weight</string>
    <string name="color">Color</string>
    <string name="text">Text</string>
    <string name="text_size">Text size</string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="participants_word">Participants</string>
    <string name="event_begin_label">Event begin</string>
    <string name="event_end_label">Event end</string>
</resources>