<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color"
            android:id="@+id/input_color"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text"
            android:id="@+id/input_text"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_size"
            android:id="@+id/input_text_size"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/italic" />
    <Switch
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bold" />

</LinearLayout>