<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp">

    <TextView
        android:textColor="@color/GrappBlackMedium"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_yet_defined"
        android:id="@+id/title" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/lay_filesize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            style="@style/SubHeadTextView"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_yet_defined"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/filesize"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/lay_filetype"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_type"
            style="@style/SubHeadTextView"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_yet_defined"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/filetype"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/bg_bottom_border"
        android:paddingBottom="15dp"
        android:id="@+id/lay_last_modified"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modification"
            style="@style/SubHeadTextView"
            android:layout_marginEnd ="20dp"
            android:gravity="center_vertical"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_yet_defined"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:id="@+id/last_modified"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_vertical|start"
        android:id="@+id/download">
        <ImageView
            android:contentDescription="@string/icon_download"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_download"
            android:layout_weight="6"
            android:gravity="start"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/download"
            style="@style/SubHeadTextView"
            android:gravity="center_vertical"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_vertical|start"
        android:id="@+id/delete">
        <ImageView
            android:contentDescription="@string/icon_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_delete"
            android:layout_weight="6"
            android:tint="@color/GrappRed"
            android:gravity="start"
             />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete"
            style="@style/SubHeadTextView"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColor="@color/GrappRed"
            />
    </LinearLayout>

</LinearLayout>