<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/default_user_photo"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:srcCompat="@drawable/default_logo_avatar"
        android:padding="5dp"
        android:id="@+id/avatar"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/word_reply"
            android:id="@+id/comment"
            android:inputType="textMultiLine"
            android:nextFocusUp="@id/avatar"
            android:nextFocusLeft="@id/avatar"
            />
    </android.support.design.widget.TextInputLayout>
    <ImageButton
        android:contentDescription="@string/send_your_comment"
        android:id="@+id/reply"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_comment"
        android:background="@color/GrappTransparent"
        android:scaleX="-1"
        android:tint="@color/GrappBlackLight"/>
</LinearLayout>