<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stroke_color"
            android:id="@+id/input_stroke_color"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/background_color"
            android:id="@+id/input_background_color"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        app:errorTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/line_weight"
            android:id="@+id/input_line_weight"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>